--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -2,6 +2,51 @@
     max-width: 1600px;
     margin: 0 auto;
 }
+#hero-msg h1{
+    text-align: center;
+}
+#hero-msg h4 {
+    text-align: center;
+}
+.button-box {
+    text-align: center;
+}
+main section {
+    text-align: center;
+}
 #background{
     height: 725px;
+    background-color: grey;
 }
+body {
+    background-color: #fcfbfb; 
+}
+header {
+    background-color:rgba(20,30,13, .7);
+}
+nav a:hover {
+    background-color: black;
+    color: #d9c2a3;
+}    
+.book {
+    text-decoration: none;
+}
+.join{
+    text-decoration: none;
+}
+footer a {text-decoration: none;}
+.icon {
+    width: 80px;
+}
+nav a {
+    text-align: center;
+    color: #fcfbfb;
+    text-decoration: none;
+}     
+footer p {
+    font-size: 1.2em;
+} 
+footer p a:hover {
+    text-decoration: underline;
+}    
+                    
