--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -30,12 +30,23 @@ nav a:hover {
 }    
 .book {
     text-decoration: none;
+    background-color: grey;
+    color: black;
 }
 .join{
     text-decoration: none;
+    color: black;
+    background-color: grey;
 }
-footer a {text-decoration: none;}
+footer {
+    background-color:rgba(20,30,13, .7);}
+footer a {
+    text-decoration: none;
+}
 .icon {
+    width: 80px;
+}
+.logo {
     width: 80px;
 }
 nav a {
@@ -43,10 +54,19 @@ nav a {
     color: #fcfbfb;
     text-decoration: none;
 }     
+footer a {
+    color: black;
+}
 footer p {
     font-size: 1.2em;
+    color: black;
 } 
 footer p a:hover {
     text-decoration: underline;
 }    
-                    
+.msg{
+    background-color:rgba(20,30,13, .7);
+}
+#hero-img {
+    width: 100%;
+}
