--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -35,11 +35,14 @@ nav a:hover {
 }
 .join{
     text-decoration: none;
-    color: black;
-    background-color: grey;
+    color: whitesmoke;
+    background-color: rgba(230, 90, 140, 1);
 }
 footer {
-    background-color:rgba(20,30,13, .7);}
+    background-color:rgba(20,30,13, .7);
+    color: white;
+}
+
 footer a {
     text-decoration: none;
 }
@@ -55,17 +58,18 @@ nav a {
     text-decoration: none;
 }     
 footer a {
-    color: black;
+    color: whitesmoke;
 }
 footer p {
     font-size: 1.2em;
-    color: black;
+    color: whitesmoke;
 } 
 footer p a:hover {
     text-decoration: underline;
 }    
 .msg{
     background-color:rgba(20,30,13, .7);
+    color: whitesmoke;
 }
 #hero-img {
     width: 100%;
