--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,11 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap');
+:root{
+    --heading-font: "Montserrat" , sans-serif;
+    --paragraph-font: "Roboto", sans-serif; 
+}
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
 }
-#hero-msg h1{
+nav a {
     text-align: center;
-}
-#hero-msg h4 {
+    color: #fcfbfb;
+    text-decoration: none;
+    padding: 35px;
+}     
+#hero-msg h1 #hero-msg h4{
     text-align: center;
 }
 .button-box {
@@ -14,12 +23,23 @@
 main section {
     text-align: center;
 }
+main section img {
+    box-sizing: border-box;
+    color: rgba(20, 30, 13, .7);;
+}
 #background{
     height: 725px;
     background-color: grey;
 }
 body {
     background-color: #fcfbfb; 
+    font-family: var(--paragraph-font, sans-serif);
+    font-family: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color:rgba(20,30,13, .7);
@@ -27,46 +47,76 @@ header {
 nav a:hover {
     background-color: black;
     color: #d9c2a3;
-}    
-.book {
+}   
+ .book .join{
     text-decoration: none;
     background-color: grey;
     color: black;
+    padding: 15px 30px;
+    margin-top: 50px;
+    font-size: 18px;
+    border-radius: 5px;
 }
-.join{
-    text-decoration: none;
-    color: black;
+.book:hover, .join:hover{
     background-color: grey;
+    color: white
+}
+.home-title{
+    color: #ffffff;
+    margin-top: 10px;
+}
+h4{
+    color: #ffffff;
+}
+.msg{
+    background-color:rgba(20,30,13, .7);
+    color: whitesmoke;
+    line-height: 1.5em;
+    padding: 35px;
+}
+.msg h2{
+    font-family: var(--heading-font, sans-serif);
+    font-size: 2em;
+}
+.msg p {
+    color: white;
+    padding-bottom: 25px 50px;
 }
 footer {
-    background-color:rgba(20,30,13, .7);}
+    background-color:rgba(20,30,13, .7);
+    color: white;
+    padding-top: 15px;
+    margin-top: 200px;
+}
 footer a {
     text-decoration: none;
+    color: whitesmoke;
 }
-.icon {
-    width: 80px;
-}
-.logo {
-    width: 80px;
-}
-nav a {
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;
-}     
-footer a {
-    color: black;
-}
-footer p {
-    font-size: 1.2em;
-    color: black;
-} 
 footer p a:hover {
     text-decoration: underline;
 }    
-.msg{
-    background-color:rgba(20,30,13, .7);
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+.logo {
+    width: 80px;
+    padding-top: 5px;
 }
 #hero-img {
     width: 100%;
 }
+footer p {
+    font-size: 1.2em;
+    color: whitesmoke;
+} 
+footer p a:hover{
+    text-decoration: underline;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid;
+}
+/* left off on section 5 */
