--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -3,7 +3,13 @@
     --heading-font: "Montserrat" , sans-serif;
     --paragraph-font: "Roboto", sans-serif; 
 }
-
+body {
+    background-color: #fcfbfb;
+    font-family: var(--paragraph-font);
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -54,6 +60,7 @@ nav a:hover {
     color: black;
     padding: 15px 30px;
     margin-top: 50px;
+    font-family: var(--paragraph-font);
     font-size: 18px;
     border-radius: 5px;
 }
@@ -64,6 +71,8 @@ nav a:hover {
 .home-title{
     color: #ffffff;
     margin-top: 10px;
+    font-family: var(--heading-font);
+    font-size: 2em;
 }
 h4{
     color: #ffffff;
@@ -73,6 +82,7 @@ h4{
     color: whitesmoke;
     line-height: 1.5em;
     padding: 35px;
+    line-height: 1.5em;
 }
 .msg h2{
     font-family: var(--heading-font, sans-serif);
@@ -81,6 +91,8 @@ h4{
 .msg p {
     color: white;
     padding-bottom: 25px 50px;
+    font-family: var(--paragraph-font);
+    font-size: .8em;
 }
 footer {
     background-color:rgba(20,30,13, .7);
@@ -118,5 +130,8 @@ footer p a:hover{
 }
 .card-img {
     border: 10px solid;
+}
+#logo_link {
+    padding-top: 5px;
 }
 /* left off on section 5 */
