--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root{
-    --heading-font: "Montserrat" , sans-serif;
-    --paragraph-font: "Roboto", sans-serif; 
+    --heading-font: "Montserrat", "Open sans", "sans-serif";
+    --paragraph-font: "Roboto", "Open sans", "sans-serif"; 
 }
 body {
     background-color: #fcfbfb;
@@ -39,8 +39,8 @@ main section img {
 }
 body {
     background-color: #fcfbfb; 
-    font-family: var(--paragraph-font, sans-serif);
-    font-family: 22px;
+    font-family: var(--paragraph-font);
+    font-size: 22px;
     margin: 0;
     padding: 0;
 }
@@ -54,7 +54,7 @@ nav a:hover {
     background-color: rgb(12 20 6 / 70%);;
     color: #d9c2a3;
 }   
- .book .join{
+.book .join{
     text-decoration: none;
     background-color: grey;
     color: black;
@@ -85,12 +85,12 @@ h4{
     line-height: 1.5em;
 }
 .msg h2{
-    font-family: var(--heading-font, sans-serif);
+    font-family: var(--heading-font);
     font-size: 2em;
 }
 .msg p {
     color: white;
-    padding-bottom: 25px 50px;
+    padding: 25px 50px;
     font-family: var(--paragraph-font);
     font-size: .8em;
 }
