--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -54,7 +54,7 @@ nav a:hover {
     background-color: rgb(12 20 6 / 70%);;
     color: #d9c2a3;
 }   
-.book .join{
+.book, .join{
     text-decoration: none;
     background-color: grey;
     color: black;
