--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -14,17 +14,37 @@ body {
     max-width: 1600px;
     margin: 0 auto;
 }
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 nav a {
     text-align: center;
     color: #fcfbfb;
     text-decoration: none;
     padding: 35px;
 }     
-#hero-msg h1 #hero-msg h4{
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h1 {
     text-align: center;
+}
+#hero-msg h4{
+    text-align: center;
+    color: white;
 }
 .button-box {
     text-align: center;
+}
+.home-grid{
+    grid-template-columns: repeat(10, 1fr);
+
+}
+main {
+    display: grid;
 }
 main section {
     text-align: center;
@@ -36,6 +56,8 @@ main section img {
 #background{
     height: 725px;
     background-color: grey;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body {
     background-color: #fcfbfb; 
@@ -49,6 +71,8 @@ h2 {
 }
 header {
     background-color:rgba(20,30,13, .7);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover {
     background-color: rgb(12 20 6 / 70%);;
@@ -56,7 +80,7 @@ nav a:hover {
 }   
 .book, .join{
     text-decoration: none;
-    background-color: grey;
+    background-color: #d9c2a3;
     color: black;
     padding: 15px 30px;
     margin-top: 50px;
@@ -69,7 +93,7 @@ nav a:hover {
     color: white
 }
 .home-title{
-    color: black;
+    color: #d9c2a3;
     margin-top: 10px;
     font-family: var(--heading-font);
     font-size: 2em;
@@ -77,12 +101,27 @@ nav a:hover {
 h4{
     color: black;
 }
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
 .msg{
     background-color:rgba(20,30,13, .7);
     color: whitesmoke;
     line-height: 1.5em;
     padding: 35px;
     line-height: 1.5em;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2{
     font-family: var(--heading-font);
@@ -95,10 +134,12 @@ h4{
     font-size: .8em;
 }
 footer {
-    background-color:rgba(20,30,13, .7);
-    color: white;
-    padding-top: 15px;
+    display: flex;
+    background-color: #6f7364;
+    padding: 25px 50px;
     margin-top: 200px;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     text-decoration: none;
@@ -115,6 +156,16 @@ footer p a:hover {
     width: 80px;
     padding-top: 5px;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 #hero-img {
     width: 100%;
 }
@@ -128,9 +179,74 @@ footer p a:hover{
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
-.card-img {
-    border: 10px solid;
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
 }
+.card-img, .mountains {
+    width: 100%;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+.moutains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
