--- a/final-project/styles/site-plan.css
+++ b/final-project/styles/site-plan.css
@@ -1,18 +1,18 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #08415C  ;
+  --secondary-color: #CC2936 ;
+  --accent1-color: #F8F8F8;
+  --accent2-color: #B4D2E7;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Roboto", "Montserrat";
+  --paragraph-font: "Open Sans", "Montserrat";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
@@ -20,9 +20,9 @@ Fonts are separated by a | */
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
+  --nav-link-color: #F8F8F8;
+  --nav-background-color: #08415C;
+  --nav-hover-link-color: #F8F8F8;
   --nav-hover-background-color: #396E94;
 }
 
@@ -53,8 +53,6 @@ hr {
   background: var(--accent1-color);
 }
 header {
-  display: grid;
-  grid-template-columns: 150px auto;
   padding: 1em;
   text-align: center;
   color: var(--headline-color-on-color);
@@ -103,7 +101,6 @@ p.colored {
 
 nav {
   display: flex;
-  justify-content: space-around;
   background-color: var(--nav-background-color);
   line-height: 3em;
   text-align: center;
