--- a/final-project/styles/site-plan.css
+++ b/final-project/styles/site-plan.css
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #B4D2E7;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Roboto", "Montserrat";
-  --paragraph-font: "Open Sans", "Montserrat";
+  --heading-font:"Montserrat", "Roboto";
+  --paragraph-font: "Roboto", "Open Sans";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
