--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -207,6 +207,8 @@ footer p a:hover{
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
+/*********************************** Page 2 ***********************************/
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
