--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -24,6 +24,9 @@ nav a {
     text-decoration: none;
     padding: 35px;
 }     
+#hero img{
+    height: 60%;
+}
 #hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
@@ -44,7 +47,7 @@ nav a {
 
 }
 main {
-    display: grid;
+    /* display: grid; */
 }
 main section {
     text-align: center;
@@ -52,6 +55,7 @@ main section {
 main section img {
     box-sizing: border-box;
     color: rgba(20, 30, 13, .7);;
+    max-width: 80%;
 }
 #background{
     height: 725px;
@@ -207,8 +211,164 @@ footer p a:hover{
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
-/*********************************** Page 2 ***********************************/
 
+/* form styles  */
+.contactus{
+    text-align: center;
+}
+form {
+    display: inline-block;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+    text-align: center;
+    /* max-width: 50%; */
+  }
+  
+  p + p {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    min-width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, text areas have a monospace font */
+    font: 1em sans-serif;
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+    /* Match form field borders */
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Set the outline width and style */
+    outline-style: solid;
+    /* To give a little highlight on active elements */
+    outline-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+  }
+  #feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+
+/*********************************** Page 2 ***********************************/
+.flex-display{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: -25%;
+}
+.content-section{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 1.5rem;
+}
+.content-section.reversed{
+    flex-direction: row-reverse;
+}
+.image-container{
+    display: flex;
+    width: 30%;
+}
+.image-container img, .reversed-image img{
+    width: 100%;
+    border-radius: 8px;
+}
+.text-container, .reversed-text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 70%;
+}
+.title{
+    display: flex;
+    gap: 0.5rem;
+    margin: 0;
+    padding: 0;
+}
+.title-reversed{
+    display: flex;
+    justify-content: end;
+    margin: 0;
+    padding: 0;
+}
+.description {
+    margin: 0;
+    padding: 0;
+    line-height: 1.25;
+    font-size: 1rem;
+    width: 100%;
+}
+
+
+
+
+
+/* .grid-display{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 1rem;
+}
+.Salmon-river-description {
+    grid-column: 2/4;
+}
+.Grey-Canyon{
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.Grey-Canyon-Description{
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+.Grand-Canyon{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+.Grand-Canyon-Description{
+    grid-column: 2/4;
+    grid-row: 3/4;
+    
+} */
+/*********************************** Responsive ******************************/
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
