--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -294,6 +294,7 @@ form {
     flex-direction: column;
     gap: 2rem;
     margin-top: -25%;
+    padding: 0 2rem;
 }
 .content-section{
     display: flex;
@@ -337,37 +338,6 @@ form {
     font-size: 1rem;
     width: 100%;
 }
-
-
-
-
-
-/* .grid-display{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 1rem;
-}
-.Salmon-river-description {
-    grid-column: 2/4;
-}
-.Grey-Canyon{
-    grid-column: 3/4;
-    grid-row: 2/3;
-}
-.Grey-Canyon-Description{
-    grid-column: 1/3;
-    grid-row: 2/3;
-}
-.Grand-Canyon{
-    grid-column: 1/2;
-    grid-row: 3/4;
-}
-.Grand-Canyon-Description{
-    grid-column: 2/4;
-    grid-row: 3/4;
-    
-} */
 /*********************************** Responsive ******************************/
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
