--- a/final-project/styles/syles.css
+++ b/final-project/styles/syles.css
@@ -325,6 +325,43 @@ hr{
     background-color: #00DBDE;
     background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
 }
+/*******************     SKILLS PAGE     *******************/
+.skills-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  .skill-container {
+    background-color: var(--secondary-background-color-light);
+    border-radius: 1rem;
+    box-shadow:  0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+  .skill-container h1{
+    padding: 0 1rem;
+  }
+  .skill-container hr{
+    width: calc(100% - 2rem);
+  }
+  .skill-content{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
+  .skill {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    width: 20%;
+  }
+  .skill img {
+    height: 125px;
+  }
+  .skill p {
+    font-weight: 600;
+  }
 /*******************     EDUCATION PAGE     *******************/
 .education-container {
     display: flex;
@@ -395,3 +432,95 @@ hr{
     text-align: left;
     width: 70%;
 }
+/************************* CONTACT PAGE *******************/
+.contact-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+  }
+  .contact-icon-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+  }
+  .contact-container a{
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+    color: var(--text-color-light);
+  }
+  .contact-icon-container p a::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    background-color: var(--secondary-color-light);
+    transition: width .5s;
+  }
+  .contact-icon-container p a:hover:after {
+    width: 100%;
+  }
+  .contact-icon{
+    font-size: 3rem;
+    padding: .5rem;
+    border-radius: 50%;
+    width: 100px;;
+  }
+  .contact-icon:hover{
+    border: 2px solid var(--text-color-light);
+    cursor: pointer;
+  }
+  .contact-icon-insta{
+    font-size: 3rem;
+    padding: .5rem;
+    border-radius: 100%;
+  }
+  /*******************     FOOTER     *******************/
+  .footer-container {
+    background-color: var(--background-color-dark);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+    margin: 0;
+    margin-top: 5rem;
+    bottom: 0;
+  }
+  .footer-container ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    padding: 3.5rem 0;
+  }
+  .footer-container ul li {
+    margin: 0;
+    padding: 0;
+  }
+  .footer-container ul li a {
+    text-decoration: none;
+    color: var(--text-color-dark);
+    margin: 0;
+    padding: 0;
+  }
+  .footer-container button {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .to-top {
+    font-size: 2.5rem;
+    color: var(--text-color-light)
+  }
