--- a/final-project/styles/syles.css
+++ b/final-project/styles/syles.css
@@ -65,7 +65,6 @@ body{
     text-decoration: none;
     font-weight: 500;
     color: var(--text-color-light);
-  
     position: relative;
     transition: color 0.3s ease;
 }
@@ -182,111 +181,95 @@ hr{
     font-weight: 600;
 }
   /*******************     PROJECTS PAGE     *******************/
-.projects-container {
+  .projects-container {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     gap: 1rem 1.5rem;
-}
-.project-container {
+  }
+  .project-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     width: 48%;
     border-radius: 1rem;
-}
-.image-container {
+  }
+  .image-container {
     position: relative;
     border-radius: 1rem;
     max-width: 750px;
-    padding: 1.5rem;
     transition: transform 0.3s ease;
     margin: 0 auto;
-}
-.project-image {
+  }
+  .project-image-desktop {
     width: 100%;
     border-radius: 1rem;
     transition: opacity 0.3s ease;
-}
-.project-title {
+    height: 300px;
+  }
+  .project-image-mobile{
+    width: 100%;
+    border-radius: 1rem;
+    transition: opacity 0.3s ease;
+    height: 300px;
+    display: none;
+  }
+  .project-title {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0);
-    color: White;
+    color: black;
     padding: 10px 20px;
     border-radius: 5px;
     opacity: 0;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.5s ease;
     text-align: center;
     font-weight: bold;
-}
-.project-image:hover {
+    pointer-events: none;
+  }
+  .project-image-desktop:hover, .project-image-mobile:hover{
     opacity: 0.5;
     cursor: pointer;
-}
-.image-container:hover {
+  }
+  .image-container:hover {
     transform: scale(1.01);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-.image-container:hover .project-image{
-    opacity: .5;
-}
-.image-container:hover .project-title{
+  }
+  .image-container:hover{
+    opacity: 0.5;
+  }
+  .image-container:hover .project-title{
     opacity: 1;
     cursor: pointer;
-}
-.image-container:hover:after {
+  }
+  .image-container:hover:after {
     position: absolute;
     top: 40%;
     width: 90%;
     text-align: center;
     font-weight: 600;
     opacity: .3
-}
-.image-container-1:hover:after {
-    content:"Project 1";
-    color: #fff;
-}
-.tech-container {
+  }
+  .tech-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 0.5rem;
     justify-content: center;
-}
-.tech-container p {
+  }
+  .tech-container p {
     padding: 3px 9px;
     border-radius: 1rem;
     color: #3F88C5;
     border: 1px solid #3F88C5;
     font-weight: 500;
     margin: 0;
-}
-.image-container-1 {
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-}
-.image-container-2 {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-}
-.image-container-3 {
-    background-color: #00DBDE;
-    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
-}
-.image-container-4 {
-    background-color: #00DBDE;
-    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
-}
-.image-container-5 {
-    background-color: #00DBDE;
-    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
-}
+  }
 /*******************     SKILLS PAGE     *******************/
 .skills-container {
     display: flex;
