--- a/final-project/styles/site-plan.css
+++ b/final-project/styles/site-plan.css
@@ -5,10 +5,10 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #08415C  ;
-  --secondary-color: #CC2936 ;
-  --accent1-color: #F8F8F8;
-  --accent2-color: #B4D2E7;
+  --primary-color: #fff ;
+  --secondary-color: #eee; ;
+  --accent1-color: #1b98e0;
+  --accent2-color: #393E41;
 
   /* change the values below to your chosen font(s) */
   --heading-font:"Montserrat", "Roboto";
@@ -18,12 +18,12 @@ Fonts are separated by a | */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #F8F8F8;
-  --nav-background-color: #08415C;
-  --nav-hover-link-color: #F8F8F8;
-  --nav-hover-background-color: #396E94;
+  --paragraph-color-on-color: #393E41; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #eee  ;
+  --nav-link-color: #393E41;
+  --nav-background-color: #fff;
+  --nav-hover-link-color: #393E41;
+  --nav-hover-background-color: #fff;
 }
 
 
