--- a/final-project/styles/syles.css
+++ b/final-project/styles/syles.css
@@ -469,3 +469,152 @@ hr{
     font-size: 2.5rem;
     color: var(--text-color-light)
 }
+/*******************     RESPONSIVE     *******************/
+@media only screen and (max-width: 1300px) {
+    .home-description {
+      width: 60%;
+    }
+  }
+  @media only screen and (max-width: 1000px) {
+    .skill-content{
+      justify-content: space-evenly;
+    }
+  }
+  @media only screen and (max-width: 800px) {
+    .page-container {
+      width: 95%;
+    }
+    .section-divider p {
+      padding: 0;
+      width: 100%;
+      text-align: center;
+      font-size: 3.2rem;
+    }
+    /* Home Page */
+    .home-description {
+      width: 64%;
+    }
+    /* Experience Page  */
+    .experience-container{
+      width: 90%;
+      margin: 0 auto;
+    }
+    /* Projects Page  */
+    .projects-container{
+      flex-direction: column;
+    }
+    .project-container{
+      width: 95%;
+      margin: 0 auto;
+    }
+    /* Education Page  */
+    .education-container {
+      flex-direction: column;
+    }
+    .education-container-left, .education-container-right {
+      width: 95%;
+      margin: 0 auto;
+    }
+    /* Contact Page */
+    .contact-container {
+      flex-direction: column;
+    }
+    .contact-icon-container {
+      flex-direction: row;
+      justify-content: unset;
+      width: 95%;
+      gap: 1rem;
+    }
+    .animation-in-link {
+      animation: appear linear;
+      animation-timeline: view();
+      animation-range: entry 0% cover 15%;
+    }
+    .animation-in-insta {
+      animation: appear linear;
+      animation-timeline: view();
+      animation-range: entry 0% cover 10%;
+    }
+    .animation-in-fb {
+      animation: appear linear;
+      animation-timeline: view();
+      animation-range: entry 0% cover 5%;
+    }
+  }
+  @media only screen and (max-width: 750px) {
+    .skill img{
+      width: 150px;
+      height: unset;
+    }
+  }
+  @media only screen and (max-width: 700px) {
+    /* Nav */
+    #navigation {
+      display: none;
+    }
+    #mobile-navigation {
+      display: flex;
+    }
+    .desktop-to-top {
+      display: none;
+    }
+    .mobile-to-top {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  @media only screen and (max-width: 650px) {
+    /* Home Page */
+    .home-description {
+      width: 100%;
+    }
+    /* Experience Page */
+    .experience-top {
+      flex-direction: column;
+      justify-content: center;
+      gap: 1rem;
+      padding: .5rem 0
+    }
+    .experience-top-entry {
+      width: 100%;
+    }
+    .experience-company {
+      margin: 0;
+    }
+    .experience-title {
+      margin: 0;
+    }
+  
+  }
+  @media only screen and (max-width: 500px) {
+    .skill{
+      width: 25%;
+    }
+    .skill img{
+      height: unset;
+      width: 100px;
+    }
+    /* .project-image-desktop{
+      display: none;
+    }
+    .project-image-mobile{
+      display: block;
+    } */
+  }
+  @media only screen and (max-width: 450px) {
+    /* Home Page */
+    .home-title {
+      font-size: 4.7rem;
+      text-align: left;
+    }
+    .home-description {
+      width: 100%;
+    }
+  }
+  @media only screen and (max-width: 400px) {
+    /* Home Page */
+    .home-title {
+      font-size: 4rem;
+    }
+  }
